--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -50,14 +50,14 @@ server {
         proxy_pass $target;
     }
 
-#    location / {
-#        try_files $uri @rewrites;
-#        root /frontend;
-#    }
-#
-#    location @rewrites {
-#        rewrite ^(.+)$ /index.html last;
-#    }
+    location / {
+        try_files $uri @rewrites;
+        root /frontend;
+    }
+
+    location @rewrites {
+        rewrite ^(.+)$ /index.html last;
+    }
 }
 
 
