--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   backend:
-    image: image1:latest
+    image: registry.gitlab.propulsion-home.ch/full-stack/batch-15-february-2021/full-stack-motion-projects/juskoded/motion_fs:latest
     restart: always
     env_file:
       - ./envs/dev.env
