--- a/backend/requirements.yml
+++ b/backend/requirements.yml
@@ -5,6 +5,7 @@ dependencies:
   - psycopg2
   - pip:
       - Django==3.1.7
+      - django-cors-headers==3.7.0
       - djangorestframework==3.12.2
       - djangorestframework_simplejwt==4.6
       - Pillow==8.1
